--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ckan-version: [2.9]
+        # TODO: Switch to 2.9 when 2.9.5 is released
+        ckan-version: [2.9.5]
         solr-image: [2.9, 2.9-solr8]
     container:
       image: openknowledge/ckan-dev:${{ matrix.ckan-version }}
