--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
 
         ckan -c test.ini db init
     - name: Run tests
-      run: pytest --ckan-ini=test.ini --cov=ckanext.sitesearch --disable-warnings ckanext/sitesearch
+      run: pytest --ckan-ini=test.ini --cov=ckanext.sitesearch --cov-append --cov-report=xml --disable-warnings ckanext/sitesearch
     - name: Upload coverage report to codecov
       uses: codecov/codecov-action@v1
       with:
