--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ckan-version: [2.9]
-        solr-image: [2.9, 2.9-solr8]
+        exclude:
+            - ckan-version: "2.10"
+              solr-image: "2.10"
+            - ckan-version: 2.9
+              solr-image: 2.9
+            - ckan-version: 2.9
+              solr-image: 2.9-solr8
       fail-fast: false
     container:
-      # TODO: Switch to 2.9 when 2.9.5 is released
-      image: openknowledge/ckan-dev:2.9.5
+      image: openknowledge/ckan-dev:{{ matrix.ckan-version }}
     services:
       solr:
         image: ckan/ckan-solr:${{ matrix.solr-image }}
