--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ckan-version: ["2.10", 2.9]
         include:
           - ckan-version: "2.10"
             solr-image: "2.10"
@@ -15,7 +14,7 @@ jobs:
             solr-image: 2.9-solr8
       fail-fast: false
     container:
-      image: openknowledge/ckan-dev:{{ matrix.ckan-version }}
+      image: openknowledge/ckan-dev:${{ matrix.ckan-version }}
     services:
       solr:
         image: ckan/ckan-solr:${{ matrix.solr-image }}
