--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,15 +6,15 @@ jobs:
     strategy:
       matrix:
         include:
-            - ckan-version: "2.10"
-              solr-image: "2.10"
-            - ckan-version: 2.9
-              solr-image: 2.9
-            - ckan-version: 2.9
-              solr-image: 2.9-solr8
+          - ckan-version: "2.10"
+            solr-image: "2.10"
+          - ckan-version: 2.9
+            solr-image: 2.9
+          - ckan-version: 2.9
+            solr-image: 2.9-solr8
       fail-fast: false
     container:
-      image: openknowledge/ckan-dev:{{ matrix.ckan-version }}
+      image: openknowledge/ckan-dev:${{ matrix.ckan-version }}
     services:
       solr:
         image: ckan/ckan-solr:${{ matrix.solr-image }}
@@ -40,7 +40,6 @@ jobs:
     - name: Install requirements
       # Install any extra requirements your extension has here (dev requirements, other extensions etc)
       run: |
-        pip install -r requirements.txt
         pip install -r dev-requirements.txt
         pip install -e .
     - name: Setup extension
