--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,8 @@ jobs:
       run: |
         pip install -r dev-requirements.txt
         pip install -e .
+        
+        pip install -e git+https://github.com/ckan/ckanext-pages.git#egg=ckanext-pages
     - name: Setup extension
       # Extra initialization steps
       run: |
